--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -10,7 +10,7 @@
 	<title>금연 여행</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="/main.css" />
+	<link rel="stylesheet" href="main.css" />
 
 </head>
 
@@ -45,7 +45,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<video src="/forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
+				<video src="forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
 				<div class="v-text">
 				<h3>세상은 고통으로 가득하지만, 그것을 극복하는 사람들도 가득하다.</h3>
 				<h3>- 헬렌 켈러</h3>
