팀원 이상현 수정완

--- a/MavenSample/src/main/webapp/left-sidebar_2.html
+++ b/MavenSample/src/main/webapp/left-sidebar_2.html
@@ -5,328 +5,240 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Left Sidebar - TXT by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<div class="logo container">
-						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
-						</div>
-					</div>
-				</header>
+<head>
+	<title>Left Sidebar - TXT by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 
-			<!-- Nav -->
-				<nav id="nav">
+	<style>
+		.div {
+			display: flex;
+			float: left;
+			margin-right: 200px;
+
+		}
+		.div1 {
+			display: flex;
+			float: left;
+			margin-right: 70px;
+
+		}
+	</style>
+</head>
+
+<body class="is-preload">
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header">
+			<div class="logo container">
+				<div>
+					<h1><a href="index.html" id="logo">금연여행</a></h1>
+					<p>금연 가이드</p>
+				</div>
+			</div>
+		</header>
+
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li class="current"><a href="index.html">홈</a></li>
+				<li>
+					<a href="#">금연 정보</a>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li>
-							<a href="#">Dropdown</a>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li><a href="#">금연 가이드</a></li>
+						<li><a href="#">금연 뉴스</a></li>
 					</ul>
-				</nav>
+				</li>
+				<li><a href="#">금연 도움 기관</a></li>
+				<li>
+					<a href="#">나의 건강정보</a>
+					<ul>
+						<li><a href="#">마이페이지</a></li>
+					</ul>
+				</li>
 
-			<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
-							<div class="col-3 col-12-medium">
-								<div class="sidebar">
+				<li><a herf="Login">로그인</a></li>
 
-									<!-- Sidebar -->
 
-										<!-- Recent Posts -->
-											<section>
-												<h2 class="major"><span>Recent Posts</span></h2>
-												<ul class="divided">
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">A Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">6 hours ago</li>
-																<li class="icon fa-comments"><a href="#">34</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">Another Subheading</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">9 hours ago</li>
-																<li class="icon fa-comments"><a href="#">27</a></li>
-															</ul>
-														</article>
-													</li>
-													<li>
-														<article class="box post-summary">
-															<h3><a href="#">And Another</a></h3>
-															<ul class="meta">
-																<li class="icon fa-clock">Yesterday</li>
-																<li class="icon fa-comments"><a href="#">184</a></li>
-															</ul>
-														</article>
-													</li>
-												</ul>
-												<a href="#" class="button alt">Archives</a>
-											</section>
+			</ul>
+		</nav>
 
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Ipsum Dolore</span></h2>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<p>
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
+		<!-- Main -->
+		<section id="main">
+			<div class="container">
+				<div class="row">
+					<div class="col-3 col-12-medium">
+						<div class="sidebar">
 
-										<!-- Something -->
-											<section>
-												<h2 class="major"><span>Magna Feugiat</span></h2>
-												<p>
-													Rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper scele risque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum sed commodo luctus blandit.
-												</p>
-												<a href="#" class="button alt">Learn more</a>
-											</section>
+							<!-- Sidebar -->
 
-								</div>
-							</div>
-							<div class="col-9 col-12-medium imp-medium">
-								<div class="content">
-
-									<!-- Content -->
-
-										<article class="box page-content">
-
-											<header>
-												<h2>Left Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
-												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
-												</ul>
-											</header>
-
-											<section>
-												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
-												<p>
-													Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.
-												</p>
-											</section>
-
-											<section>
-												<h3>More intriguing information</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.
-												</p>
-												<p>
-													Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
-
-											<section>
-												<h3>So in conclusion ...</h3>
-												<p>
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae.
-												</p>
-												<p>
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.
-												</p>
-											</section>
+							<!-- Recent Posts -->
+							<section>
+								<h2 class="major"><span>금연정보</span></h2>
+								<ul class="divided">
+									<li>
+										<article class="box post-summary">
+											<h3><a href="#">금연가이드</a></h3>
 
 										</article>
+									</li>
+									<li>
+										<article class="box post-summary">
+											<h3><a href="#">금연뉴스</a></h3>
 
-								</div>
-							</div>
-							<div class="col-12">
+										</article>
+									</li>
 
-								<!-- Features -->
-									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
-										<div>
-											<div class="row">
-												<div class="col-3 col-6-medium col-12-small">
+								</ul>
 
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
+							</section>
 
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
 
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
 
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
 
-												</div>
-												<div class="col-3 col-6-medium col-12-small">
-
-													<!-- Feature -->
-														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
-															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
-															</p>
-														</section>
-
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
 						</div>
 					</div>
-				</section>
+					<div class="col-9 col-12-medium imp-medium">
+						<div class="content">
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="container">
-						<div class="row gtr-200">
-							<div class="col-12">
+							<!-- Content -->
 
-								<!-- About -->
+							<article class="box page-content">
+
+								<header>
+									<h2>금연가이드</h2>
+									<p>금단증상 극복하기</p>
+								</header>
+								<section>
+									<span class="image featured"><img
+											src="./사진/금연광고.gif"
+											alt="" /></span>
+								</section>
+								<div class="div">
 									<section>
-										<h2 class="major"><span>What's this about?</span></h2>
+
+
+										<h3> 4D 방법</h3>
 										<p>
-											This is <strong>TXT</strong>, yet another free responsive site template designed by
-											<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>. It's released under the
-											<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for
-											whatever you're working on (personal or commercial), just be sure to give us credit for the design.
-											That's basically it :)
+											<b>Delay</b> : 잠깐 시간가지기 <br>
+											<b>Drink</b> : 물 마시기<br>
+											<b>Distraction</b> : 다른일에 집중하기<br>
+											<b>Deep breathing</b> : 심호흡하기
 										</p>
 									</section>
+								</div>
+								<section>
 
-							</div>
-							<div class="col-12">
+									<h3>2R 방법</h3>
+									<p>
+										<b>Renimd</b> : 상상하기 <br>
+										<b>Refuse</b> : 거절하기
+									</p>
 
-								<!-- Contact -->
+								</section>
+								<div class="div">
 									<section>
-										<h2 class="major"><span>Get in touch</span></h2>
-										<ul class="contact">
-											<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
-											<li><a class="icon brands fa-instagram" href="#"><span class="label">Instagram</span></a></li>
-											<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-											<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
-										</ul>
+										<h3>짜증, 신경질</h3>
+										<p>
+											1. 운동하기 <br> 2. 술과 카페인이 들어간 음료 줄이기 <br> 3. 충분한 수면 취하기 <br> 4. 심호흡하기
+										</p>
+
 									</section>
+								</div>
+								<section>
+									<h3>불면증</h3>
+									<p>
+										1. 자기 전 산책 <br> 2. 독서 <br> 3. 따뜻한 목욕 <br> 4. 바나나 또는 따뜻한 우유 섭취 <br> 5. 점심 이후에는
+										카페인 음료 피하기
+									</p>
+								</section>
+								<div class="div1">
+									<section>
+										<h3>식욕증가</h3>
+										<p>
+											1. 비상상자 만들기<br> - 입이 심심할 때 십을 수있는 것들을 넣어두기<br> - 빨대, 계피줄기, 커피젓는 막대, 이쑤시개, 껌,
+											신선한채소 등<br>
+											2. 물이나 저칼로리 음료 마시기 <br> 3. 금연 초기 술자리는 가급적 피하기
+										</p>
+									</section>
+								</div>
+								<section>
+									<h3>집중력감소/피로감</h3>
+									<p>
+										1. 물 많이 마시기 <br> 2. 빠른 걸음으로 야외 산책하기 <br> 3. 며칠간은 스케줄을 최소화하기 <br> 4. 휴식시간 가지기
+										<br> 5. 매일
+										충분히 자고, 낮잠자기
+									</p>
+								</section>
+								<section>
+									<h3>변비, 가스, 복통 등</h3>
+									<p>
+										1. 섬유소가 많은 음식과 수분 섭취<br> - 과일, 생야채, 곡물, 시리얼 <br> 2. 식습관 변화시키기 <br> 3. 영양사나 의사와
+										상담
+									</p>
+								</section>
 
-							</div>
+							</article>
+
 						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
 
-						<!-- Copyright -->
-							<div id="copyright">
-								<ul class="menu">
-									<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								</ul>
-							</div>
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="container">
+				<div class="row gtr-200">
+					<div class="col-12">
+
+						<!-- About -->
+						<section>
+							<h2 class="major"><span>스마트인재개발원</span></h2>
+							<p>
+								This is <strong>TXT</strong>, yet another free responsive site template designed by
+								<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.
+								It's released under the
+								<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel
+								free to use it for
+								whatever you're working on (personal or commercial), just be sure to give us credit for
+								the design.
+								That's basically it :)
+							</p>
+						</section>
 
 					</div>
-				</footer>
 
-		</div>
+				</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+				<!-- Copyright -->
+				<div id="copyright">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
 
-	</body>
+			</div>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
