팀원 김병훈꺼 밋

--- a/MavenSample/src/main/webapp/left-sidebar_2.html
+++ b/MavenSample/src/main/webapp/left-sidebar_2.html
@@ -116,7 +116,7 @@
 								</header>
 								<section>
 									<span class="image featured"><img
-											src="./사진/금연광고.gif"
+											src="금연광고.gif"
 											alt="" /></span>
 								</section>
 								<div class="div">
