--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -19,7 +19,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index.html">홈</a></li>
+				<li class="current"><a href="index1.html">홈</a></li>
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
