--- a/MavenSample/src/main/webapp/left-sidebar_2.html
+++ b/MavenSample/src/main/webapp/left-sidebar_2.html
@@ -35,7 +35,7 @@
 		<header id="header">
 			<div class="logo container">
 				<div>
-					<h1><a href="index.html" id="logo">금연여행</a></h1>
+					<h1><a href="index1.html" id="logo">금연여행</a></h1>
 					<p>금연 가이드</p>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index.html">홈</a></li>
+				<li class="current"><a href="index1.html">홈</a></li>
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
@@ -191,43 +191,39 @@
 				</div>
 			</div>
 		</section>
+<!-- Footer -->
+	<footer id="footer">
+		<div class="container">
+			<div class="row gtr-200">
+				<div class="col-12">
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="container">
-				<div class="row gtr-200">
-					<div class="col-12">
-
-						<!-- About -->
-						<section>
-							<h2 class="major"><span>스마트인재개발원</span></h2>
-							<p>
-								This is <strong>TXT</strong>, yet another free responsive site template designed by
-								<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.
-								It's released under the
-								<a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel
-								free to use it for
-								whatever you're working on (personal or commercial), just be sure to give us credit for
-								the design.
-								That's basically it :)
-							</p>
-						</section>
-
-					</div>
+					<!-- About -->
+					<section>
+						<h3 class="major"><span>About Us</span></h3>
+						<p>
+							인공지능 융합서비스 개발자과정(NCS) 15회차 TEAM 돌아와조<br>
+							광주광역시 남구 송암로 60 스마트인재개발원
+						</p>
+					</section>
 
 				</div>
+				<div class="col-12">
 
-				<!-- Copyright -->
-				<div id="copyright">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+
+
 				</div>
-
 			</div>
-		</footer>
 
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul class="menu">
+					<li>&copy; Untitled. All rights reserved</li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+
+		</div>
+	</footer>
 	</div>
 
 	<!-- Scripts -->
