이상현 페이지 연결완료

--- a/MavenSample/src/main/webapp/금연일정관리.html
+++ b/MavenSample/src/main/webapp/금연일정관리.html
@@ -53,15 +53,16 @@
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
-						<li><a href="#">금연 가이드</a></li>
-						<li><a href="#">금연 뉴스</a></li>
+						<li><a href="./금연가이드.html">금연 가이드</a></li>
+						<li><a href="./금연뉴스.html">금연 뉴스</a></li>
 					</ul>
 				</li>
 				<li><a href="#">금연 도움 기관</a></li>
 				<li>
-					<a href="#">나의 건강정보</a>
+					<a href="./마이페이지.html">나의 건강정보</a>
 					<ul>
-						<li><a href="#">마이페이지</a></li>
+						<li><a href="./마이페이지.html">마이페이지</a></li>
+						<li><a href="./금연일정관리.html">금연일정관리</a></li>
 					</ul>
 				</li>
 
