이상현 파일연결및 글자 수정

--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -30,7 +30,7 @@
 			</ul>
 			</li>
 			<li><a href="#">금연 도움 기관</a></li>
-			<li><a href="./마이페이지.html">나의 건강정보</a>
+			<li><a href="#">나의 건강정보</a>
 			  <ul>
                   <li><a href="./마이페이지.html">마이페이지</a></li>
                   <li><a href="./금연일정관리.html">금연일정관리</a></li>
