--- a/MavenSample/src/main/webapp/금연일정관리.html
+++ b/MavenSample/src/main/webapp/금연일정관리.html
@@ -21,7 +21,7 @@
 			<div class="logo container">
 				<div>
 					<h1><a href="index1.html" id="logo">금연여행</a></h1>
-					<p>마이페이지</p>
+					<p>금연일정관리</p>
 				</div>
 			</div>
 		</header>
@@ -59,7 +59,7 @@
 				</li>
 				<li><a href="#">금연 도움 기관</a></li>
 				<li>
-					<a href="./마이페이지.html">나의 건강정보</a>
+					<a href="#">나의 건강정보</a>
 					<ul>
 						<li><a href="./마이페이지.html">마이페이지</a></li>
 						<li><a href="./금연일정관리.html">금연일정관리</a></li>
@@ -83,22 +83,18 @@
 
 							<!-- Recent Posts -->
 							<section>
-								<h2 class="major"><span>목록</span></h2>
+								<h2 class="major"><span>메뉴</span></h2>
 								<ul class="divided">
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">마이페이지</a></h3>
-											<ul class="meta">
-												<li class="icon fa-clock">6 hours ago</li>
-											</ul>
+											<h3><a href="./마이페이지.html">마이페이지</a></h3>
+											
 										</article>
 									</li>
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">금연일정관리</a></h3>
-											<ul class="meta">
-												<li class="icon fa-clock">6 hours ago</li>
-											</ul>
+											<h3><a href="./금연일정관리.html">금연일정관리</a></h3>
+											
 										</article>
 									</li>
 								</ul>
