--- a/MavenSample/src/main/webapp/마이페이지.html
+++ b/MavenSample/src/main/webapp/마이페이지.html
@@ -67,7 +67,7 @@
 				</li>
 				<li><a href="#">금연 도움 기관</a></li>
 				<li>
-					<a href="./마이페이지.html">나의 건강정보</a>
+					<a href="#">나의 건강정보</a>
 					<ul>
 						<li><a href="./마이페이지.html">마이페이지</a></li>
 						<li><a href="./금연일정관리.html">금연일정관리</a></li>
@@ -95,18 +95,14 @@
 								<ul class="divided">
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">마이페이지</a></h3>
-											<ul class="meta">
-												<li class="icon fa-clock">6 hours ago</li>
-											</ul>
+											<h3><a href="./마이페이지.html">마이페이지</a></h3>
+											
 										</article>
 									</li>
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">금연일정관리</a></h3>
-											<ul class="meta">
-												<li class="icon fa-clock">6 hours ago</li>
-											</ul>
+											<h3><a href="./금연일정관리.html">금연일정관리</a></h3>
+											
 										</article>
 									</li>
 								</ul>
