--- a/MavenSample/src/main/webapp/금연가이드.html
+++ b/MavenSample/src/main/webapp/금연가이드.html
@@ -55,7 +55,7 @@
 				</li>
 				<li><a href="#">금연 도움 기관</a></li>
 				<li>
-					<a href="./마이페이지.html">나의 건강정보</a>
+					<a href="#">나의 건강정보</a>
 					<ul>
 						<li><a href="./마이페이지.html">마이페이지</a></li>
 						<li><a href="./금연일정관리.html">금연일정관리</a></li>
@@ -83,13 +83,13 @@
 								<ul class="divided">
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">금연가이드</a></h3>
+											<h3><a href="./금연가이드.html">금연가이드</a></h3>
 
 										</article>
 									</li>
 									<li>
 										<article class="box post-summary">
-											<h3><a href="#">금연뉴스</a></h3>
+											<h3><a href="./금연뉴스.html">금연뉴스</a></h3>
 
 										</article>
 									</li>
