--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -10,8 +10,15 @@
 	<title>금연 여행</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="main.css" />
-
+	<link rel="stylesheet" href="assets/css/main.css" />
+<style>
+	#wise{
+		border: 10px solid #b1ddab;
+		position: fixed;
+		right: 0px;
+		bottom: 0px;
+	}
+</style>
 </head>
 
 <body class="homepage is-preload">
@@ -23,8 +30,8 @@
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
-						<li><a href="./금연가이드.html">금연 가이드</a></li>
-						<li><a href="./금연뉴스.html">금연 뉴스</a></li>
+						<li><a href="#">금연 가이드</a></li>
+						<li><a href="#">금연 뉴스</a></li>
 				</li>
 
 			</ul>
@@ -32,8 +39,9 @@
 			<li><a href="#">금연 도움 기관</a></li>
 			<li><a href="#">나의 건강정보</a>
 			  <ul>
-                  <li><a href="./마이페이지.html">마이페이지</a></li>
-                  <li><a href="./금연일정관리.html">금연일정관리</a></li>
+                  <li><a href="#">마이페이지</a></li>
+                  <li><a href="#">금연일정관리</a></li>
+				<li><a href="#">나의 신체변화</a></li>
                </ul>
             </li>
 
@@ -46,11 +54,8 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<video src="forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
-				<div class="v-text">
-				<h3>세상은 고통으로 가득하지만, 그것을 극복하는 사람들도 가득하다.</h3>
-				<h3>- 헬렌 켈러</h3>
-				</div>
+				<video src="images/forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
+				
 			</div>
 		</section>
 
@@ -94,7 +99,9 @@
 
 	</div>
 
-
+<div>
+	<p id="wise">명언 들어갈 곳</p>
+</div>
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="container">
