--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -54,7 +54,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<video src="images/forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
+				<video src="./forest_-_9796(1080p).mp4" type="video/mp4" muted autoplay loop>	
 				
 			</div>
 		</section>
