상현이 신체변화 만들고 다른페이지랑 신체변화 연결 완료

--- a/MavenSample/src/main/webapp/금연일정관리.html
+++ b/MavenSample/src/main/webapp/금연일정관리.html
@@ -63,6 +63,7 @@
 					<ul>
 						<li><a href="./마이페이지.html">마이페이지</a></li>
 						<li><a href="./금연일정관리.html">금연일정관리</a></li>
+						<li><a href="./신체변화.html">나의신체변화</a></li>
 					</ul>
 				</li>
 
@@ -95,6 +96,12 @@
 										<article class="box post-summary">
 											<h3><a href="./금연일정관리.html">금연일정관리</a></h3>
 											
+										</article>
+									</li>
+									<li>
+										<article class="box post-summary">
+											<h3><a href="./신체변화.html">나의신체변화</a></h3>
+
 										</article>
 									</li>
 								</ul>
