--- a/MavenSample/src/main/webapp/금연뉴스.html
+++ b/MavenSample/src/main/webapp/금연뉴스.html
@@ -44,6 +44,7 @@
 					<ul>
 						<li><a href="./마이페이지.html">마이페이지</a></li>
 						<li><a href="./금연일정관리.html">금연일정관리</a></li>
+						<li><a href="./신체변화.html">나의신체변화</a></li>
 					</ul>
 				</li>
 
