팀장-메인페이지 오류 수정, 로그인 연결

--- a/MavenSample/src/main/webapp/index1.html
+++ b/MavenSample/src/main/webapp/index1.html
@@ -45,7 +45,7 @@
                </ul>
             </li>
 
-			<li><a herf="Login.jsp">로그인</a></li>
+			<li><a herf="./Login.jsp">로그인</a></li>
 
 
 			</ul>
