푸른 커밋- login html, jsp 오타랑 정렬 고쳤습니당

--- a/MavenSample/src/main/webapp/Login.html
+++ b/MavenSample/src/main/webapp/Login.html
@@ -65,7 +65,7 @@
 				</ul>
 			</li>
 
-			<li><a herf="/Login.html">로그인</a></li>
+			<li><a href="/Login.html">로그인</a></li>
 
 
 			</ul>
@@ -78,19 +78,19 @@
 					<div class="col-12">
 						<div class="content">
 
-							<!-- Content -->
-							<form acton="./Login.jsp" method="post">
+							<form action="LoginService" method="post">
 								<div class="form-group">
-									<label for="email">이메일</label>
-									<input type="text" id="email" name="email" placeholder="이메일을 입력하세요">
+									<label for="email">이메일</label> <input type="text" id="email"
+										name="email" placeholder="이메일을 입력하세요">
 								</div>
 								<div class="form-group">
-									<label for="pw">비밀번호</label>
-									<input type="password" id="pw" name="pw" placeholder="비밀번호를 입력하세요">
+									<label for="pw">비밀번호</label> <input type="password" id="pw"
+										name="pw" placeholder="비밀번호를 입력하세요">
 								</div>
-								<button type="submit" name="btn1">로그인</button>
-								<button name="btn2">회원가입</button>
-							</form>
+								<input type="submit" value="로그인">
+							<button name="btn2">회원가입</button>
+								<a href="./Join.jsp"></a>
+								</form>
 						</div>
 					</div>
 				</div>
@@ -140,11 +140,11 @@
 		
 		<!--Q4. 클릭 시 페이지 이동-->
 		<script>
-			let btn1 =document.getElementsByName("btn1")
+			let btn1 =document.getElementByName("btn1")
 			btn1.addEventListener("click", function(){
 				location.href="./calendar.jsp";
 			})
-			let btn2 =document.getElementsByName("btn2")
+			let btn2 =document.getElementByName("btn2")
 			btn2.addEventListener("click", function(){
 				location.href="./Join.jsp";
 			})
