--- a/MavenSample/src/main/webapp/금연일정관리.html
+++ b/MavenSample/src/main/webapp/금연일정관리.html
@@ -209,7 +209,7 @@
 											var calendarEl = $('#calendar')[0];
 											// full-calendar 생성하기
 											var calendar = new FullCalendar.Calendar(calendarEl, {
-												height: '1000px', // calendar 높이 설정
+												height: 'auto', // calendar 높이 설정
 												expandRows: true, // 화면에 맞게 높이 재설정
 												customButtons: {
 													mySaveButton: {
