팀장 - 경로 전체 수정

--- a/MavenSample/src/main/webapp/Login.html
+++ b/MavenSample/src/main/webapp/Login.html
@@ -48,7 +48,7 @@
 			<ul>
 				<li class="current"><a href="./Main.jsp">홈</a></li>
 				<li>
-					<a href="/금연가이드.html">금연 정보</a>
+					<a href="./Sguide.jsp">금연 정보</a>
 					<ul>
 						<li><a href="/금연가이드.html">금연 가이드</a></li>
 						<li><a href="/금연뉴스.html">금연 뉴스</a></li>
