--- a/MavenSample/src/main/webapp/금연일정관리.html
+++ b/MavenSample/src/main/webapp/금연일정관리.html
@@ -87,7 +87,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index1.html">홈</a></li>
+				<li class="current"><a href="./Main.jsp">홈</a></li>
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
@@ -125,7 +125,7 @@
 					</ul>
 				</li>
 
-				<li><a herf="Login">로그인</a></li>
+				<li><a herf="./Login.jsp">로그인</a></li>
 
 
 			</ul>
