--- a/MavenSample/src/main/webapp/마이페이지.html
+++ b/MavenSample/src/main/webapp/마이페이지.html
@@ -37,7 +37,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index.html">홈</a></li>
+				<li class="current"><a href="./Main.jsp">홈</a></li>
 				<li>
 					<a href="#">금연 정보</a>
 					<ul>
@@ -49,7 +49,7 @@
 			</li>
 			<li><a href="#">금연 도움 기관</a></li>
 			<li><a href="#">나의 건강정보</a></li>
-			<li><a herf="Login">로그인</a></li>
+			<li><a herf="./Login.jsp">로그인</a></li>
 
 
 			</ul>
